--- a/Web-fundamentals/style.css
+++ b/Web-fundamentals/style.css
@@ -126,7 +126,15 @@ header{
     display: flex;
     gap:2rem;
 }
-
+.icon{
+  display: flex;
+  flex-direction: row;
+}
+.icon img{
+  width: 50px;
+  height: 50px;
+  
+}
 
 .left-content{
     background-color:#27282a;
