--- a/Web-fundamentals/kanban-dashboard/style.css
+++ b/Web-fundamentals/kanban-dashboard/style.css
@@ -1,207 +1,5 @@
-    * {
+*{
+    margin: 0%;
+    padding: 0%;
     box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    background-color: silver;
-}
-
-.head-section {
-    height: 6rem;
-    background-color: #4d4d4d;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-.color-section{
-    width: 50rem;
-    height: 4rem;
-    background-color: #3d3d3d;
-
-   display: flex;
-   align-items: center;
-   justify-content:space-evenly;
-   position: relative;
-  
-}
-h5{
-    color:aliceblue;
-    font-size: 13px;
-    text-align: start;
-  position: absolute;
-  left: 1rem;
-}
-.color-box{
-    width: 100%;
-  margin-left: 1rem;
-  border-radius: 55px;
-  display: flex;
-  flex-direction: column;
- justify-content: center; 
-
- 
-}
-.color-box h4{
-    color:aliceblue;
-    margin-left: 2rem;
-    font-size: 10px;
-text-wrap:nowrap;
-}
-.yellow{
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color: yellow;
-    
-
-}
-.lightblue{
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color: lightblue;
-
-}
-.green{
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color: green;
-
-}
-.burlywood{
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color:burlywood
-}
-.action-btn{
-    width: 6rem;
-    height: 3.6rem;
-    margin-left: 2rem;
-    background-color: #3d3d3d;
-    display: flex;
-  
-    justify-content: space-around;
-    align-items: center;
-    color:white;
-    font-size:1.5rem;
-}
-.add-btn:hover{
-    color: yellowgreen;
-    width: 50%;
-    font-size: 2rem;
-    text-align: center;
-}
-.delete-btn:hover{
-    color:yellowgreen;
-    width: 50%;
-    font-size: 2rem;
-    text-align: center;
-}
-.new-ticket-area{
-    width: 55%;
-    height: 20rem;
-    background-color: #cecaca;
-    position: absolute;
-    left: 18em;
-    top:10rem;
-    display: flex;
-  
-}
-.text-area{
-    width: 70%;
-    height: 100%;
-    resize: none;
-    outline: none;
-    border: none;
-    background-color: transparent;
-   
-}
-.task-color-selector{
-    width: 30%;
-    height: 100%;
-    background-color: #3d3d3d;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-.priority-color{
-    width: 4rem;
-    height: 2.3rem;
-}
-.ticket-area{
-   display: flex;
-    justify-content: center;
-    gap:1rem;
-
-}
-.task-details{
-   border: 1px solid gray;
-    width: 15rem;
-    height: 12rem;
-   position: relative;
-    background-color:thistle;
-
-   
-}
-.ticket-color{
-    height: 1rem;
-    width: 15rem;
-    border: 1px solid gray;
-}
-.ticket-id{
-    height: 2rem;
-    background-color: lightblue;
-}
-.lock-icon{
-    font-size: 1.3rem;
-    display: flex;
-    justify-content: end;
-    align-items: end; 
-    height: 74%;
-   position: absolute;
-   left: 13.5rem;
-   top:2.8rem
-    
-}
-
-.main-body{
-    height:fit-content;
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-    align-items: start;
-gap: 2rem;
-margin-top: 0.5rem;
-
-}
-.not_started{
-    width: 25vw;
-    display: flex;
-    flex-direction: column;
-    border: 3px double; 
-    align-items: center;
-    justify-content: center; 
-  
-}
-
-.workinprogress{
-    width: 25vw;
-    border: 3px double;
-    
-    
-}
-.review{
-    width: 25vw;
-    border: 3px double;
-   
-    
-}
-.completed{
-    width: 25vw;
-    border: 3px double;
- 
-}
-.active{
-    border: 2px solid rgb(230, 53, 13);
 }
