--- a/Web-fundamentals/kanban-dashboard/style.css
+++ b/Web-fundamentals/kanban-dashboard/style.css
@@ -3,3 +3,164 @@
     padding: 0%;
     box-sizing: border-box;
 }
+body{
+    background-color: #D6E5E3;
+  
+}
+nav{
+    display: flex;
+
+}
+.home{
+    font-size: 1.8rem;  
+    margin: 0.5rem;
+    display: flex;
+    align-items: center;
+}
+.priority_container{
+    background-color:#A6B1E1;
+    width: 96.5vw;
+    height: 15vh;
+    display: flex;
+    padding-left: 1rem;
+    align-items: center;
+}
+.priority_color{
+    display: flex;
+    width: 42rem;
+    gap:0.5rem;
+  
+    align-items: center;
+}
+.ticket_filter{
+    display: flex;
+    width: 20rem;
+    gap: 1rem;
+}
+.ticket_filter>label{
+    font-size: 1.2rem;
+}
+.ticket_filter>option{
+    font-size: 1rem;
+    background-color: transparent;
+}
+.color_box{
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 25px;
+    
+}
+.task_category_container{
+    width: 90vw;
+    margin-left: 5rem;
+}
+.task_category_section{
+    display: flex;
+    justify-content: space-evenly;
+
+}
+.ticket_filter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:#DCD6F7;
+    height: 3rem;
+    border-radius: 15px;
+    width: 20rem;
+    margin-right: 1rem;
+}
+.priority_color>p{
+    margin-right: 3rem;
+}
+.yellow{
+    background-color: #5B6057; 
+}
+.green{
+    background-color: #6E9075;
+}
+.lightblue{
+    background-color: #445552;
+}
+.grey{
+    background-color: #294D4A;
+}
+.action_btn{
+    width: 8rem;
+    height: 3rem;
+    font-size: 2rem;
+    background-color:#DCD6F7;
+    display: flex;
+    align-items: center;
+    gap:2rem;
+    justify-content: center;
+    border-radius: 15px;
+}
+.add_btn:hover{
+    font-size: 3rem;
+}
+.delete_btn:hover{
+    font-size: 3rem;
+}
+.task_container{
+        background-color: whitesmoke;
+    display: flex;
+    width: 55vw;
+    height: 55vh;  
+    margin-top: 2rem;
+    margin-left: 15rem;
+    position: absolute;
+  
+}
+.text_area{
+    width: 70%;
+    outline: none;
+
+    border: none;
+    resize: none;
+    background-color: #DDF8E8;
+    font-size: 1.2rem;
+}
+.color_selector{
+  display: flex;
+  flex-direction: column;
+    background-color:silver;
+    width: 30%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.color{
+    width: 6rem;
+    height: 3rem;
+}
+.ticket_cont{
+    display: flex;
+    justify-content: center;
+    padding: 2rem;
+    gap: 2rem;
+    position: absolute;
+}
+.ticket_area{
+    width: 16rem;
+    height: 12rem;
+    background-color: #EDF0DA;
+    border: 2px solid black;
+  
+}
+.ticket_color{
+    height: 1rem;
+}
+.ticket_id{
+    height: 1rem;
+    border: 1px solid;
+}
+.lock_icon{
+   display: flex;
+   justify-content: end;
+  margin-top: 7.6rem;
+  margin-right: 0.1rem;
+   
+}
+.active{
+    border: 4px solid lightyellow;
+}
+
