--- a/Web-fundamentals/style.css
+++ b/Web-fundamentals/style.css
@@ -139,10 +139,13 @@ header {
 }
 
 .icon {
+  width: 100%;
   display: flex;
   flex-direction: row;
   gap: 1rem;
   margin-top: 0.9rem;
+  align-items: start;
+  justify-content: start;
 }
 
 .icon .fa-icon {
