--- a/Web-fundamentals/style.css
+++ b/Web-fundamentals/style.css
@@ -362,16 +362,16 @@ margin-right: 12rem;
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
-  top:3rem;
-  left:-3rem
+  top:5rem;
+  left:-4.6rem;
 }
 .timeline::before{
   content: '';
     position: absolute;
     width: 2px;
-    height: 20rem;
+    height: 19rem;
     background-color: #b8b846;
-    top: 10px;
+    top: 9.5px;
     bottom: 0;
 }
 .container{
@@ -441,7 +441,7 @@ z-index: 1;
 .res{
   display: flex;
   
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 .res h2{
   font-family: "Work Sans", sans-serif;
@@ -459,18 +459,20 @@ z-index: 1;
 display: flex;
 position: absolute;
 align-items: center;
-
+left:27rem;
 }
 .work{
   display: flex;
- 
+  position: absolute;
+  align-items: center;
+  left:57rem
 }
 .timeline1{
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
-  top:3rem;
-  left:-18rem
+  top:5rem;
+  left:-9rem
 }
 .timeline1::before{
   content: '';
@@ -488,55 +490,55 @@ margin-left: 3rem;
 }
 .timeline1::after{
   content: '';
-  position: absolute;
     width: 15px;
   height: 15px;
+  position: absolute;
   border-radius: 50%;
   background-color: #b7b70c;
   z-index: 1;
   left: -6px;
   top:6px;
-
-}
-.container2:first-child::before{
-  content: "";
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  background-color: #b8b846;
-  z-index: 1;
-  left: -6px;
-  top:6rem
 }
 .container2:first-child::after{
+content: "";
+width: 15px;
+height: 15px;
+position: absolute;
+border-radius: 50%;
+background-color: #b7b70c;
+left: -6px;
+z-index: 1;
+top:5.6rem;
+}
+.container2:last-child::before{
   content: "";
+  width: 15px;
+  height: 15px;
   position: absolute;
+  border-radius: 50%;
+  background-color: #b7b70c;
+  left: -6px;
+  z-index: 1;
+  top:11.4rem;
+  }
+.test{
+  content: "";
   width: 15px;
   height: 15px;
   border-radius: 50%;
-  background-color: #b8b846;
+  background-color: #b7b70c;
   z-index: 1;
-  left: -6px;
-  top:11.8rem
-}
-.container2:nth-last-of-type()::before{
-  content: "";
   position: absolute;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  background-color: #b8b846;
-  z-index: 1;
   left: -6px;
-  top:15rem;
+  top:17rem
 }
+
 .container2 h2{
   font-family: "Work Sans", sans-serif;
   font-weight: 500;
   margin-bottom: 2rem;
   font-size: 1.2rem;
-  line-height: 20px;
+  line-height: 19px;
 
 }
 
@@ -545,4 +547,66 @@ margin-left: 3rem;
   font-weight: 600;
   font-size: 0.9rem;
   color: #b8b846;
+}
+.my-skills h2{
+  font-family: "Work Sans", sans-serif;
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+.skill-container{
+  background: var(--bg-gradient-jet);
+  padding: 20px;
+  border-radius: 14px;
+  box-shadow: #27282a;
+  margin-right: 1rem;
+}
+.skill{
+  width: 95%;
+  margin-right: 1rem;
+  
+}
+.skill h4{
+  display: flex;
+
+  margin-bottom: 0.5rem;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.skill span{
+  margin-left: 0.5rem;
+  font-weight: 400;
+  font-size: 1rem;
+}
+.progress-container{
+  width:100%;
+  background-color: #696b6d;
+  border-radius: 25px;
+  margin-bottom: 1.4rem;
+}
+.progress-bar{
+text-align: end;
+padding-top: 7px;
+padding-bottom: 7px;
+}
+.html{
+  width: 90%;
+  background-color:#b8b846;
+  border-radius: 5px;
+}
+.js{
+  width: 85%;
+  background-color:#b8b846;
+  border-radius: 5px;
+}
+.sql{
+  width: 85%;
+  background-color:#b8b846;
+  border-radius: 5px;
+}
+.java{
+  width: 75%;
+  background-color:#b8b846;
+  border-radius: 5px;
 }
