--- a/Web-fundamentals/kanban-dashboard/style.css
+++ b/Web-fundamentals/kanban-dashboard/style.css
@@ -149,13 +149,15 @@ nav{
     justify-content: center;
     padding: 2rem;
     gap: 2rem;
+ 
 }
 .ticket_area{
     width: 16rem;
     height: 12rem;
     background-color: #EDF0DA;
     border: 2px solid black;
-  
+    margin-bottom: 2rem;
+  position: relative;
 }
 .ticket_color{
     height: 1rem;
@@ -175,26 +177,30 @@ nav{
     border: 4px solid lightyellow;
 }
 .status_container{
-    background-color:#DCD6F7;
+    
     margin-left: 2.6rem;
     margin-right: 1.4rem;
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    gap:3rem
     
 }
 .status_category{
-    display: flex;
-    justify-content: space-between;
-    border: 2px solid;
-    
+
+    background-color:#DCD6F7;
+    height: auto;
+    width: 16rem; 
 }
-.status_category h2{
-    display: flex;
-    justify-content: center;
+.status_category p{
     font-family: "Catamaran", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    border-left: 2px solid;
-    height: 500px;
-    width: -webkit-fill-available;
+    font-weight: 800;
+    font-style:oblique;
+    border-radius: 26px;
+    margin-bottom: 2rem;
+    border-bottom: 2px solid;
+    text-align: center;
 }
+
 
