--- a/Web-fundamentals/kanban-dashboard/style.css
+++ b/Web-fundamentals/kanban-dashboard/style.css
@@ -1,33 +1,18 @@
 *{
-    margin: 0%;
-    padding: 0%;
     box-sizing: border-box;
- 
+    margin: 0;
+    padding: 0;
 }
 body{
-    background-color: #D6E5E3;
-  
-  
+    background-color:lightgray;
 }
-nav{
-    display: flex;
 
-}
-.home{
-    font-size: 1.8rem;  
-    margin: 0.5rem;
-    display: flex;
-    align-items: center;
-}
-.priority_container{
-    background-color:#A6B1E1;
-    width: 96.5vw;
+.container{
+    width: 95vw;
     height: 15vh;
-    display: flex;
-    padding-left: 1rem;
-    align-items: center;
-    margin-top: 0.5rem;
-    
+    margin-left: 2rem;
+    margin-top: 1rem;
+
 }
 .priority_color{
     display: flex;
@@ -40,10 +25,48 @@ nav{
     align-items: center;
     font-size: 1.3rem;
 }
+.nav_section{
+    display: flex;
+    align-items: center;
+    justify-content:space-evenly;
+    height: 15vh;
+    box-shadow: 0px 5px 10px #294D4A;
+}
+.color_box{
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 25px;
+    
+}
+.priority_color>p{
+    margin-right: 3rem;
+}
+.gray{
+    background-color: #C6CCB2; 
+}
+.purple{
+    background-color: #3E2A35;
+}
+.green{
+    background-color: #093824;
+}
+.jasper{
+    background-color: #BF4E30;
+}
 .ticket_filter{
     display: flex;
     width: 20rem;
     gap: 1rem;
+}
+.ticket_filter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 5px 10px whitesmoke;
+    height: 3rem;
+    border-radius: 15px;
+    width: 20rem;
+    margin-right: 1rem;
 }
 .ticket_filter>label{
     font-size: 1.2rem;
@@ -56,51 +79,20 @@ nav{
     font-size: 1rem;
     background-color: transparent;
 }
-.color_box{
-    height: 1.5rem;
-    width: 1.5rem;
-    border-radius: 25px;
-    
-}
-.task_category_container{
-    width: 90vw;
-    margin-left: 5rem;
-}
-.task_category_section{
+.catergoty_section{
     display: flex;
     justify-content: space-evenly;
-
-}
-.ticket_filter{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color:#DCD6F7;
-    height: 3rem;
-    border-radius: 15px;
-    width: 20rem;
-    margin-right: 1rem;
-}
-.priority_color>p{
-    margin-right: 3rem;
-}
-.yellow{
-    background-color: #5B6057; 
-}
-.green{
-    background-color: #6E9075;
-}
-.lightblue{
-    background-color: #445552;
-}
-.grey{
-    background-color: #294D4A;
+    align-items: flex-start;
+    gap:16px;
+    padding: 24px 32px;
+    overflow: hidden;
+    height: 100%;
+ 
 }
 .action_btn{
     width: 8rem;
-    height: 3rem;
     font-size: 2rem;
-    background-color:#DCD6F7;
+    box-shadow: 2px 5px 6px whitesmoke;
     display: flex;
     align-items: center;
     gap:2rem;
@@ -113,94 +105,104 @@ nav{
 .delete_btn:hover{
     font-size: 3rem;
 }
-.task_container{
-        background-color: whitesmoke;
+.new_task_area{
     display: none;
-    width: 55vw;
-    height: 55vh;  
-    margin-top: 2rem;
-    margin-left: 15rem;
-    position: absolute;
-  
+    gap: 5px;
+    margin: 2rem;
+    width: 80vw;
+    height: 20vh;
+    justify-content: center;
+   align-items: center;
+   box-shadow: 0px 5px 15px;
+   border-radius: 10px;
 }
-.text_area{
-    width: 70%;
-    outline: none;
-
+#new_task{
+    padding: 10px;
+    width: 250px;
+    border-radius: 4px;
     border: none;
-    resize: none;
-    background-color: #DDF8E8;
-    font-size: 1.2rem;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+    background: white;
+    outline: none;
+    font-size: 1.3rem;
 }
-.color_selector{
-  display: flex;
-  flex-direction: column;
-    background-color:silver;
-    width: 30%;
-    justify-content: space-evenly;
-    align-items: center;
+.new_task_area>input{
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    font-size: 2rem;
+    font-family: "Catamaran", sans-serif;
+    margin-left: 1rem;
+   
 }
-.color{
-    width: 6rem;
-    height: 3rem;
+.new_task_area>label{
+    margin-right: 1rem;
 }
-.ticket_cont{
+.new_task_area>button{
+    padding: 12px 32px;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0.25);
+    color: black;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    display: flex;
+    gap: 1rem;
+}
+.ticket_container{
     display: flex;
     justify-content: center;
     padding: 2rem;
-    gap: 2rem;
- 
+    gap:2rem;
+    
 }
 .ticket_area{
-    width: 16rem;
-    height: 12rem;
-    background-color: #EDF0DA;
-    border: 2px solid black;
-    margin-bottom: 2rem;
-  position: relative;
+    width: 20rem;
+    height: 90px;
+    background-color: #f4f4f4;
+    border-radius: 10px;
+    margin: 0.2rem;
+    padding: 0.5rem 1rem 0.9rem;
+    color: black;
+    
+   
+    font-family: "Catamaran", sans-serif;
+}
+.ticket_task_area{
+    height: 70%;
+    font-weight: 550;
+    font-size: 1.4rem;
+}
+.ticket_id_sec{
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align:left;
+    display: flex;
+    gap:5px; 
+    align-items: center;   
 }
 .ticket_color{
-    height: 1rem;
+    width: 20px;
+    height: 15px;
+    border-radius: 5px;
 }
-.ticket_id{
-    height: 1rem;
-    border: 1px solid;
-}
-.lock_icon{
-   display: flex;
-   justify-content: end;
-  margin-top: 7.6rem;
-  margin-right: 0.1rem;
-   
-}
-.active{
-    border: 4px solid lightyellow;
-}
-.status_container{
-    
-    margin-left: 2.6rem;
-    margin-right: 1.4rem;
-    margin-top: 1rem;
+.sections{
     display: flex;
-    justify-content: center;
-    gap:3rem
-    
+    flex-direction: column;
+    gap:12px;
+    background-color: #f4f4f4;
+    box-shadow: 0px 15px 15px rgba(0, 0, 0.25);
+    padding: 12px;
+    border-radius: 4px;
+    width: 20rem;
+    min-height: 200px;
+    flex-shrink: 0;
+    align-items: center;
 }
-.status_category{
-
-    background-color:#DCD6F7;
-    height: auto;
-    width: 16rem; 
-}
-.status_category p{
+.sections>h2{
     font-family: "Catamaran", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 800;
-    font-style:oblique;
-    border-radius: 26px;
-    margin-bottom: 2rem;
-    border-bottom: 2px solid;
-    text-align: center;
+    font-weight: 600;
+    font-size: 1.34rem;
 }
-
-
